Correctly identifies classes with complete type name after replacing whitespace in template

--- a/parfumier/static/css/styles.css
+++ b/parfumier/static/css/styles.css
@@ -280,7 +280,7 @@ div.social-icons .background-twitter {
     background-color: rgba(137, 160, 118, 0.1);
 }
 
-.type-Bright {
+.type-Bright-Floral {
     border-color: #d69fd8;
     background-color: rgba(214, 159, 216, 0.1);
 }
@@ -295,7 +295,7 @@ div.social-icons .background-twitter {
     background-color: rgba(229, 255, 0, 0.1);
 }
 
-.type-Floral {
+.type-Floral-Bouquet {
     border-color: #612cc5;
     background-color: rgba(98, 44, 197, 0.1);
 }
@@ -335,7 +335,7 @@ div.social-icons .background-twitter {
     background-color: rgba(230, 201, 106, 0.1);
 }
 
-.type-Single {
+.type-Single-Flower {
     border-color: #a159ca;
     background-color: rgba(161, 89, 202, 0.1);
 }
